--- a/home.html
+++ b/home.html
@@ -2,16 +2,15 @@
 <html lang="en">
 
 <head>
-    <!-- Required meta tags -->
+
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
-    <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="css/bootstrap.css">
     <!--font web-->
     <link rel="stylesheet" href="css/all.css">
     <link rel="stylesheet" href="index.css">
-    <title>Cindi,store</title>
+    <title>Cind,store</title>
 </head>
 
 <body>
